Test drive Apicurio integration

--- a/app/ui/src/app/customizations/api-connector/api-connector-create/api-connector-create.component.html
+++ b/app/ui/src/app/customizations/api-connector/api-connector-create/api-connector-create.component.html
@@ -58,6 +58,11 @@
         </syndesis-api-connector-info>
       </div>
     </div>
+    <div class="row row-cards-pf">
+      <div class="card-pf">
+          <api-editor #apiEditor></api-editor>
+      </div>
+    </div>
   </section>
 </article>
 
