chore(server): add perf handler
This adds a trivial performance handler used in POC. It is not secured
so integration pods can call into it as well.

Endpoints:
 - `GET /api/v1/perf/record?group={group}&phase=${phase}` - records the
   start of a phase in the specified group
 - `GET /api/v1/perf/dump?group={group}` - ends the recording for the
   given group and dumps the performance results in the response

Example:

```shell
$ curl -k https://syndesis.$(minishift ip).nip.io/api/v1/perf/record?group=X\&phase=1
$ sleep 3 && curl -k https://syndesis.$(minishift ip).nip.io/api/v1/perf/record?group=X\&phase=2
$ sleep 2 && curl -k https://syndesis.$(minishift ip).nip.io/api/v1/perf/dump?group=X
+ Profiler [X]
|-- elapsed time                      [1]  3082.922 milliseconds.
|-- elapsed time                      [2]  2081.516 milliseconds.
|-- Total                             [X]  5164.442 milliseconds.
```

--- a/app/integration/project-generator/src/main/resources/io/syndesis/integration/project/generator/templates/Application.java.mustache
+++ b/app/integration/project-generator/src/main/resources/io/syndesis/integration/project/generator/templates/Application.java.mustache
@@ -1,10 +1,20 @@
 package io.syndesis.example;
 
+import org.apache.camel.builder.RouteBuilder;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.stereotype.Component;
 
 @SpringBootApplication
 public class Application {
+
+    @Component
+    public static class StartedRoute extends RouteBuilder {
+        @Override
+        public void configure() throws Exception {
+            from("timer:go?delay=0&repeatCount=1").to("http4:syndesis-server/api/v1/perf/stop?group={{name}}");
+        }
+    }
 
     /**
      * A main method to start this application.
