feat(ui): changes for multi-flow integrations
This changes the model to match the server multi-flow integration model,
and adds the ability to switch between two flows when editing an
integration by specifying the flow id as the fragment in the URL.

--- a/app/ui/src/app/integration/edit-page/flow-view/flow-view.component.html
+++ b/app/ui/src/app/integration/edit-page/flow-view/flow-view.component.html
@@ -70,8 +70,7 @@
     </div>
 
     <div class="flow-view-container syn-scrollable--body"
-         [ngClass]="{ 'collapsed': isCollapsed }"
-         *ngIf="i && i.steps">
+         [ngClass]="{ 'collapsed': isCollapsed }">
 
       <!-- First Step -->
       <div class="step start">
